test/sema/typeck/trait/qualified-path-method-as-value.out
error: value expected
--> qualified-path-method-as-value.dora:11:9
 | trait Foo[T: MyIterator] {
 |     fn test(): Int64 {
 |         [T as MyIterator]::Item::create
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 |     }
 | }
1 error found.
