test/sema/typeck/trait/qualified-path-method-as-value.dora
trait Creator {
    static fn create(): Self;
}

trait MyIterator {
    type Item: Creator;
}

trait Foo[T: MyIterator] {
    fn test(): Int64 {
        [T as MyIterator]::Item::create
    }
}
